<resources>
    <string name="app_name">SCHOWL</string>
    <string name="start_test">START TEST</string>

    <string name="choose_subject">CHOOSE SUBJECT</string>
    <string name="choose_category">CHOOSE CATEGORY</string>
    <string name="name">Name</string>
    <string name="add_category">Add category</string>
    <string name="categories">Current categories: </string>
    <string name="remove_category">Remove category</string>
    <string name="edit_subject">EDIT SUBJECT</string>
    <string name="edit_question">EDIT QUESTION</string>
</resources>
