<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="78dp" android:layout_marginTop="32dp" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
            <TextView
                    android:text="@string/edit_question"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txtEditQuestion"
                    android:textSize="32dp"
                    android:fontFamily="monospace" android:textColor="@color/navyBlue"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/editSubject"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_triangle"
                    android:id="@+id/editQuestion" android:background="@drawable/circle_button_red"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="68dp" android:background="@color/gray" android:layout_marginTop="16dp">

            <ImageView
                    android:layout_width="608dp"
                    android:layout_height="102dp" app:srcCompat="@drawable/ic_logo_owl_cropped"
                    android:id="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:ems="10"
                android:id="@+id/txtNameSubject" android:fontFamily="monospace" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" android:layout_marginTop="32dp" android:textColor="@color/navyBlue"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtxAddCategory" android:text="@string/add_category" android:fontFamily="monospace"
                android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginTop="32dp"
                android:textColor="@color/navyBlue"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/remove_category"
                android:ems="10"
                android:id="@+id/txtRemoveCategory" android:layout_marginTop="32dp" android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp" android:fontFamily="monospace" android:textColor="@color/navyBlue"/>
        <TextView
                android:text="@string/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/labelCurrentCategories"
                android:fontFamily="monospace" android:textSize="32dp" android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:textColor="@color/navyBlue"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="376dp"
                android:layout_height="match_parent" android:isScrollContainer="true" android:fadeScrollbars="true"
                android:layout_marginRight="16dp" android:layout_marginLeft="16dp" android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp">
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="32dp" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_triangle"
                android:id="@+id/editSubject" android:background="@drawable/circle_button_red"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/edit_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:textSize="32dp"
                android:fontFamily="monospace" android:textColor="@color/navyBlue"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/editSubject"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>